// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductProperties /> should not render when an empty list of properties is passed 1`] = `
<Properties
  className={null}
  lineClamp={null}
  properties={[]}
/>
`;

exports[`<ProductProperties /> should not render when no properties are passed 1`] = `
<Properties
  className={null}
  lineClamp={null}
  properties={[]}
/>
`;

exports[`<ProductProperties /> should render as expected when properties are passed 1`] = `
<Properties
  className={null}
  lineClamp={null}
  properties={
    [
      {
        "label": "Label One",
        "value": "Value One",
      },
      {
        "label": "Label Two",
        "value": "Value Two",
      },
    ]
  }
>
  <ul
    className="ui-shared__product-properties"
  >
    <li
      key="Label One-Value One"
    >
      Label One: Value One
    </li>
    <li
      key="Label Two-Value Two"
    >
      Label Two: Value Two
    </li>
  </ul>
</Properties>
`;

exports[`<ProductProperties /> should use the ellipsis component when the lineClamp prop is passed  1`] = `
<Properties
  className={null}
  lineClamp={2}
  properties={
    [
      {
        "label": "Label One",
        "value": "Value One",
      },
      {
        "label": "Label Two",
        "value": "Value Two",
      },
    ]
  }
>
  <ul
    className="ui-shared__product-properties"
  >
    <li
      key="Label One-Value One"
    >
      <Ellipsis
        className=""
        rows={2}
      >
        <Dotdotdot
          clamp={2}
          className=" common__ellipsis"
          tagName="div"
          truncationChar="…"
          useNativeClamp={true}
        >
          <div
            className=" common__ellipsis"
          >
            Label One: Value One
          </div>
        </Dotdotdot>
      </Ellipsis>
    </li>
    <li
      key="Label Two-Value Two"
    >
      <Ellipsis
        className=""
        rows={2}
      >
        <Dotdotdot
          clamp={2}
          className=" common__ellipsis"
          tagName="div"
          truncationChar="…"
          useNativeClamp={true}
        >
          <div
            className=" common__ellipsis"
          >
            Label Two: Value Two
          </div>
        </Dotdotdot>
      </Ellipsis>
    </li>
  </ul>
</Properties>
`;
